2002-12-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/sqrt.S: move the detection of 0 earlier [Bug #1837].

2002-12-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfprintf.c: recognize Inf and NaN.

2002-12-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/math.h: add isinf()/isnan().
	* libc/fplib/Makefile.am: ditto.
	* libc/fplib/isinfnan.S: new file.

2002-12-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom128.h: fix defs for CS0[012].

2002-12-06  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/Makefile.am: Generate a time-stamp file after fixing png's
	and anchors to inhibit unnecessary fixes. [Bug #1808]

2002-12-03  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/main_page.dox: Remove untested note from mega32.

2002-11-27  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* configure.in: Add missing ".o" to "crtm8535".

2002-11-26  Theodore A. Roth  <troth@openavr.org>

	* NEWS: Note support for new devices (mega32, mega64, mega8515,
	mega8535).
	* configure.in: Add support for new megas.
	* doc/TODO: Remove note about new mega header files.
	* doc/api/main_page.dox: Add note about new megas.

2002-11-26  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/Makefile.am: Fix bad anchors.

2002-11-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add section about external RAM.

2002-11-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/assembler.dox: New file.
	* doc/api/Makefile.am: use assembler.dox.
	* doc/api/inline_asm.dox: refer to assembler.dox.
	* doc/api/interrupts.dox: Ditto.

2002-11-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: fix typos.

2002-11-25  Theodore A. Roth  <troth@openavr.org>
  (Thanks to Steinar Haugen <xoplanet@msn.com> for contributing the iom32.h,